--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -11,6 +11,7 @@ html {
     height: 100%;
 }
 
+.material-select,
 .material-textfield {
     position: relative;
     margin: .5rem 0;
@@ -18,6 +19,7 @@ html {
     align-items: center;
 }
 
+.material-select > label,
 .material-textfield > label {
     position: absolute;
     font-size: 1rem;
@@ -33,6 +35,7 @@ html {
     pointer-events: none;
 }
 
+.material-select > select,
 .material-textfield > input {
     position: relative;
     font-size: 1rem;
@@ -44,16 +47,18 @@ html {
     width: 100%;
 }
 
+.material-select > select:focus,
 .material-textfield > input:focus {
     border-color: #6200EE;
 }
-
+.material-select > select:focus+label,
 .material-textfield > input:focus+label {
     color: #6200EE;
     top: 0;
     transform: translateY(-50%) scale(.9);
 }
 
+.material-select > select:not(:placeholder-shown)+label,
 .material-textfield > input:not(:placeholder-shown)+label {
     top: 0;
     transform: translateY(-50%) scale(.9);
@@ -88,6 +93,21 @@ html {
 .material-textfield > span,
 select {
     cursor: pointer;
+}
+option {
+    padding: 10px;
+}
+
+input[type=submit] {
+    color: #fff;
+    background: blue;
+    border: none;
+    border-radius: 4px;
+    padding: 0.7rem;
+}
+
+.select {
+
 }
 
 @media not all and (min-resolution:.001dpcm) {
