--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -7,6 +7,7 @@ html {
     margin: 0;
     width: 100%;
     height: 100%;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 .material-select,
@@ -108,7 +109,7 @@ input[type=submit] {
     background: #2a4ea9;
     border: none;
     border-radius: 4px;
-    padding: 0.7rem;
+    padding: .7rem;
 }
 
 .header-label {
@@ -129,6 +130,8 @@ input[type=submit] {
 
 input[type=password] {
     letter-spacing: .3rem;
+    /* font-size: 20px; */
+    /* padding-bottom: .4rem; */
 }
 
 a {
@@ -138,6 +141,10 @@ a {
 
 .bold {
     font-weight: bold;
+}
+
+.small-font {
+    font-size: .9rem;
 }
 
 @media not all and (min-resolution:.001dpcm) {
