--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -195,3 +195,10 @@ select {
 .blur-effect-blue {
     box-shadow: 0 0 200px 50px #00f;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
